Changes with melon 1.5.4                                          15 Sep 2016
    *) Added ASN.1 component.
    *) Updated RSA component.
    *) Updated Tool component.
    *) Updated Log component.
    *) Fixed a bug of parsing timestamp.
    *) Updated Hash component.
    *) Updated Fork component.
    *) Fixed macro names in Parser generator component.
    *) Updated String component and relevant components.
    *) Updated Event component.
    *) Updated Bignum component.
    *) Modified Chain component.
    *) Modified Connection component.
    *) Optimized Conf component.
    *) Optimized File cache component.
    *) Optimized Thread component.
    *) Optimized Parser generator component.

Changes with melon 1.5.3                                          28 Jun 2016
    *) Added some interfaces for RSA
    *) Added some interfaces for Big number.

Changes with melon 1.5.2                                          20 May 2016
    *) Added SHA256.

Changes with melon 1.5.1                                          17 May 2016
    *) Normalized many functions' name.
    *) Fixed a bug of timestamp in log.

Changes with melon 1.5.0                                          14 May 2016
    *) Added two interfaces for HTTP.
    *) Added websocket.

Changes with melon 1.4.3                                          02 May 2016
    *) Added an interface of hash table.

Changes with melon 1.4.2                                          25 Apr 2016
    *) Optimized calculation of Big Number.
    *) Fixed some bugs of Big Number and HTTP.

Changes with melon 1.4.1                                          20 Apr 2016
    *) Optimized division of Big Number.
    *) Fixed some bugs of Big Number.

Changes with melon 1.4.0                                          09 Apr 2016
    *) Added Big Number.
    *) Added MD5.
    *) Added SHA1.
    *) Added DES and 3DES.
    *) Added RC4.
    *) Added AES.
    *) Added Base64.
    *) Added RSA.
